fixed positioning on bottom right denomination

--- a/form.html
+++ b/form.html
@@ -32,7 +32,7 @@ text-decoration:none;
 
 <h2>Instructions</h2>
 <ol>
-  <li>Go to <a href="https://www.bitaddress.org">https://www.bitaddress.org</a></li>
+  <li>Go to <a href="https://www.bitaddress.org">https://www.bitaddress.org</a> in a new tab</li>
   <li>Click on Bulk Wallet</li>
   <li>Set the number of rows to be the number of bills you would like to print (multiples of 4 are best - limit to 50)</li>
   <li>Paste the generated bulk wallet into the form below, and hit submit.</li>
