This change implements the Leonardo note The leonardo note was submitted to the note design contest on bitcointtalk.org by BitPay. I made a minor change to the note image. I changed the BitCoins in the corner to be more "shiny" and of course I blanked out the QR codes.

--- a/form.html
+++ b/form.html
@@ -54,6 +54,7 @@ Client: <input name="client">
   <select name="design">
     <option value="">Standard PrintCoins design</option>
     <option value="psy">Psy design</option>
+    <option value="leo">Leonardo design</option>
   </select>
 </p>
 <p>
