New Turing Note, T.E and non-T.E Leonardo note. These changes make it possible to print a Leonardo note with a small private key QR code. This is useful for people who are going to put tamper evident stickers on their notes. I have also added the turing note from the Aristus bill printing project which can be found at https://github.com/aristus/bitcoin-printer Credit to Carlos Bueno for the note - http://carlos.bueno.org/2012/07/paper-bitcoins.html Additional changes were made to remove the redundant rot_text_more function and expand the rot_text function to handle rotations of any degree. A new function has been added to handle rotating qr codes as well. I would love to see more notes here. Unfortunatly, I could not find PSD or XCF files for all of the notes submited to the bitcointalk.org contest by Casascius. If someone can get me those layered images, I will add more notes.

--- a/form.html
+++ b/form.html
@@ -55,6 +55,8 @@ Client: <input name="client">
     <option value="">Standard PrintCoins design</option>
     <option value="psy">Psy design</option>
     <option value="leo">Leonardo design</option>
+    <option value="leote">Leonardo design (For T.E. Sticker)</option>
+    <option value="turing">Aristus Turing design</option>
   </select>
 </p>
 <p>
