--- a/form.html
+++ b/form.html
@@ -40,6 +40,7 @@ text-decoration:none;
   <li>Paste the generated bulk wallet into the form below, fill in mint name, and denomination and hit submit.</li>
   <li>Print and cut out bills.</li>
   <li>If you saved the pdf, please delete it and remove from trash</li>
+  <li>If you are on a Unix or Unix-like system (MacOS X, Linux, *BSD) check the /tmp directory for any PDF files matching doc*.pdf</li>
 </ol>
 
 <form method="POST">
