Adding a tamper-evident sticker version of the Psy design

--- a/form.html
+++ b/form.html
@@ -40,7 +40,7 @@ text-decoration:none;
   <li>Paste the generated bulk wallet into the form below, fill in mint name, and denomination and hit submit.</li>
   <li>Print and cut out bills.</li>
   <li>If you saved the pdf, please delete it and remove from trash</li>
-  <li>If you are on a Unix or Unix-like system (MacOS X, Linux, *BSD) check the /tmp directory for any PDF files matching doc*.pdf and delete them.</li>
+  <li>If you are on a Unix or Unix-like system (MacOS X, Linux, *BSD) check the /tmp directory for any PDF files matching doc*.pdf</li>
 </ol>
 
 <form method="POST">
@@ -55,6 +55,7 @@ Client: <input name="client">
   <select name="design">
     <option value="">Standard PrintCoins design</option>
     <option value="psy">Psy design</option>
+    <option value="psyte">Psy design (For T.E. Sticker)</option>
     <option value="leo">Leonardo design</option>
     <option value="leote">Leonardo design (For T.E. Sticker)</option>
     <option value="turing">Aristus Turing design</option>
