working on business cards

--- a/form.html
+++ b/form.html
@@ -45,10 +45,10 @@ text-decoration:none;
 <form method="POST">
 <p>Mint name is your name, nickname, or your website url related to bill printing. If you aren't web savy, try using <a href="http://sites.google.com">google sites</a>.
 <br>
-Mint Name: <input name="printer"></p>
-<p style="display:none">
+<p style="dislay:none" id="client">
 Client: <input name="client">
 </p>
+Mint Name: <input name="printer"></p>
 <p>
   Design 
   <select name="design">
@@ -57,6 +57,7 @@ Client: <input name="client">
     <option value="leo">Leonardo design</option>
     <option value="leote">Leonardo design (For T.E. Sticker)</option>
     <option value="turing">Aristus Turing design</option>
+    <option value="psy_business_card">Psy Business Card</option>
   </select>
 </p>
 <p>
